Follow ide-suggestions